@@ -27,11 +27,16 @@
     <parent>
         <groupId>org.cosplayengine</groupId>
         <artifactId>cosplay-parent</artifactId>
-        <version>0.5.0</version>
+        <version>0.6.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
@@ -159,6 +164,30 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.games.pong.CPPongGame</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>snake</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions><execution><goals><goal>java</goal></goals></execution></executions>
+                        <configuration>
+                            <skip>false</skip>
+                            <mainClass>org.cosplay.games.snake.CPSnakeGame</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -175,6 +204,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.games.macarena.CPMacarenaGame</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -191,6 +224,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.animation.CPAnimationExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -207,6 +244,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.camera.CPCameraExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -223,6 +264,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.canvas.CPCanvasExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -239,6 +284,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.fonts.CPFontsExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -255,6 +304,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.image.CPImageFormatsExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -271,6 +324,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.image.CPImageCarouselExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -287,6 +344,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.particle.CPParticleExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -303,6 +364,30 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.shader.CPShaderExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>ex:slide_shader</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions><execution><goals><goal>java</goal></goals></execution></executions>
+                        <configuration>
+                            <skip>false</skip>
+                            <mainClass>org.cosplay.examples.shader.CPSlideShaderExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -319,6 +404,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.sound.CPSoundExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -335,6 +424,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.textinput.CPTextInputExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -351,6 +444,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.tilemapper.CPTileMapperExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -367,6 +464,10 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.video.CPVideoExample</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
